        * Add options for the new compression modes in Eet. (fastcomp
        and fastdecomp - LZ4 and LZ4HC).
        * Overall sped up edje_cc by 4x faster (if you use fastcomp)
        and about 4.5x faster with old zlib compression.

2012-05-16  Cedric Bail

	* Fix table and text when fixed point is turned on.
	* Clamp image tween to never underflow also.

2012-05-20  Cedric Bail

	* Use Eina_File instead of fopen when possible in edje_cc.

2012-05-21  Shilpa Onkar Singh

        * Fix patch for edje draggable jump issue when external event
        area is used for the dragable.

2012-06-04  Cedric Bail

	* Add SPACER part to reduce the load on the canvas (lighter and faster theme).

2012-06-04  Prince Kumar Dubey

	* Fix decompile of sound samples to use sound source file, not name
	* Fix decompile of sound samples not double-free
        * Fix alsa configure option to be alsa, not flac.

2012-06-06  Jihoon Kim

	* edje_entry: display preedit string even though there is no attribute

2012-06-20  Kim Shinwoo

	* Add edje_object_access_part_list_get and acess flags in edc file.

2012-06-21  Carsten Haitzler (The Rasterman)

        * Improve edje_cc slightly to use prefix for full path to
        embryo_cc. this still like before requires embryo and edje to share
        the same install prefix for edje_cc to work.

2012-06-12  Michael Bouchaud (yoz)

	* The aliases are now inherited from the targeted group
	* Aliases can be usable with edje programs, if the part is in the
	group

2012-06-24  Cedric Bail

	* Emit signal for flagged part when their size get to zero.

2012-07-03  Tom Hacohen (TAsn)

	* Entry: Update anchors from user_insert as well.

2012-07-12  Tom Hacohen (TAsn)

	* Textblock: Fixed issue with updating only the font size using text
	classes.
	* Textblock: Fixed updating textblock text_class with
	edje_text_class_set.
	* Text classes: Fixed edje_text_class_set to behave like
	edje_object_text_class_set (and as expected) wrt NULL fonts.
